--- a/YouTube-Meowloader/yt_mwldr/yt_mwldr.csproj
+++ b/YouTube-Meowloader/yt_mwldr/yt_mwldr.csproj
@@ -53,6 +53,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom\customButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Custom\CustomProgressbar.cs" />
+    <Compile Include="Custom\customProgressbar2.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Custom\CustomTextBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
